# JobPilot

./: .env.example  .gitignore  Dockerfile  README.md  Run_JobPilot_Dashboard.bat  alembic.ini  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_healthcheck_dom.py  test_load.py
alembic/: env.py  script.py.mako
alembic/versions/: 20260610_1414_c3e80a8e477c_initial_schema.py  20260625_1032_a1b2c3d4e5f6_add_application_question.py
src/jobpilot/automation/: base.py  bumeran.py  form_filler.py  indeed.py  laborum.py  linkedin.py  manager.py  question_answerer.py  sence.py
src/jobpilot/core/: config.py  logger.py  orchestrator.py  token_guardian.py
src/jobpilot/cv/: generator.py  renderer.py  repository.py
src/jobpilot/cv/templates/: cv_template.html
src/jobpilot/dashboard/: __init__.py  app.py
src/jobpilot/dashboard/routers/: __init__.py  control.py  gemini.py  jobs.py  profile.py  sessions.py
src/jobpilot/dashboard/static/: app.js  index.html  style.css
src/jobpilot/database/: engine.py  models.py
src/jobpilot/intervention/: console.py  handler.py  telegram.py
src/jobpilot/profile/: models.py  parser.py  repository.py
src/jobpilot/scoring/: engine.py  models.py  rules.py
src/jobpilot/scraper/: base.py  bumeran.py  deduplicator.py  indeed.py  laborum.py  linkedin.py  manager.py  sence.py
tests/: test_cv_generator.py  test_deduplicator.py  test_intervention.py  test_parse_cv.py  test_question_answerer.py  test_scoring.py
tests/fixtures/gemini/: mock_cv_adapt_response.json  mock_parse_cv_response.json  mock_question_answers.json  mock_score_response.json
