[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobpilot"
version = "0.1.0"
description = "Plataforma de automatización de búsqueda y postulación laboral para Chile"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Base de datos
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",

    # Scraping y automatización
    "playwright>=1.44",

    # AI — Gemini
    "google-genai>=2.8.0",

    # Parseo de PDF
    "pymupdf>=1.24",
    "pdfplumber>=0.11",

    # Generación de CV
    "weasyprint>=62",
    "jinja2>=3.1",

    # API + Dashboard
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "aiofiles>=23.2",
    "python-multipart>=0.0.9",

    # Validación
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.1",

    # Notificaciones
    "python-telegram-bot>=21.3",

    # UI de consola
    "rich>=13.7",

    # Utilidades
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
jobpilot = "jobpilot.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/jobpilot"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
